--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,19 @@
                 <div class="winner">The winner is: <span></span></div>
 
                 <div class="betting-block">
-                    <input value="5000" />
+                    <select class="select">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                    <input value="5000" name="money" class="input" />
                     <button>Make a bet</button>
                 </div>
         </div>
