Account functionality added

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     </head>
 
     <body>
+        <header class="header">
+            <div class="account">Your account: <span class="account__amount"></span></div>
+        </header>
         <div class="wrapper" 
             style="width: 1080px;
                 margin: auto; 
